--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>lang="pt-br"
+<html lang="pt-br">
     <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +18,7 @@
         <header> 
             <h3>Post #1</h3>
         </header>
+        <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem omnis debitis illum temporibus sequi, tenetur eveniet, enim explicabo sed saepe similique hic voluptate!</p>
     </article>
     </section>
     <footer></footer>
