--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header> 
             <h3>Post #1</h3>
         </header>
-        <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem omnis debitis illum temporibus sequi, tenetur eveniet, enim explicabo sed saepe similique hic voluptate!</p>
+        <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all" target="_blank"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem omnis debitis illum temporibus sequi, tenetur eveniet, enim explicabo sed saepe similique hic voluptate!</p>
     </article>
     </section>
     <footer></footer>
