--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="foto.jpg">
+        <img src="foto.jpg" alt = "foto natureza">
    <H1> juliana daiane </H1> 
     </header>
     <section>
@@ -18,6 +18,7 @@
         <article>
         <header> 
             <h3>Post #1</h3>
+            <img src="postagem.jpg">
         </header>
         <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all" target="_blank"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem <a href="julydaia@gmail.com"> interdium augue</a>
          debitis illum temporibus sequi, tenetur eveniet, enim explicabo sed saepe similique hic voluptate!</p>
