--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
          debitis illum temporibus sequi, tenetur eveniet, enim explicabo sed saepe similique hic voluptate!</p>
     </article>
     </section>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="mailton:julydaia@gmail.com"> julydaia@gmail.com</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
