--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <li>
                 <a href="mailton:julydaia@gmail.com"> julydaia@gmail.com</a>
             </li>
+            <li>
+                <a href="linkedin.com/in/juliana-daiane-b4216769" target="_blank"> linkedin</a>
+            </li>
+            <li>
+                <a href="https://github.com/juliana-daiane" target="_blank"> Github</a>
+            </li>
         </ul>
     </footer>
 </body>
