--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>juliana</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -13,11 +14,11 @@
     </header>
     <section>
         <header> 
-            <h2> Posts</h2>
+            <h2 class="Subtitle"> Posts</h2>
         </header>
-        <article>
+        <article class="Posts">
         <header> 
-            <h3>Post #1</h3>
+            <h3 Class="Post_title"> post #1</h3>
             <img src="postagem.jpg">
         </header>
         <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all" target="_blank"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem <a href="julydaia@gmail.com"> interdium augue</a>
