--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </header>
     <section>
         <header> 
-            <h2 class="Subtitle"> Posts</h2>
+            <h2 class="Subtitle">Posts</h2>
         </header>
-        <article class="Posts">
+        <article class="posts">
         <header> 
-            <h3 Class="Post_title"> post #1</h3>
+            <h3 Class="post_title"> post #1</h3>
             <img src="postagem.jpg">
         </header>
         <p> Lorem ipsum, dolor sit <a href="https://www.linkedin.com/company/ultraseg/posts/?feedView=all" target="_blank"> consectetur adipiscing</a> elit. Eos voluptas maiores eum nisi amet delectus quidem <a href="julydaia@gmail.com"> interdium augue</a>
