--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="foto.jpg" alt = "foto natureza">
-   <H1> juliana daiane </H1> 
+   <H1 id="title"> juliana daiane </H1> 
     </header>
     <section>
         <header> 
