--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </header>
     <section>
         <header> 
-            <h2 class="Subtitle">Posts</h2>
+            <h2 class="subtitle">Posts</h2>
         </header>
-        <article class="posts">
+        <article>
         <header> 
             <h3 Class="post_title"> post #1</h3>
             <img src="postagem.jpg">
