--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </article>
     </section>
     <footer>
+        <ul class="contacts_list">
         <ol>
             <li>
                 <a href="mailton:julydaia@gmail.com"> julydaia@gmail.com</a>
