--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </article>
     </section>
     <footer>
-        <ol class="contacts_list">
-        <ol>
+        <ul class="contacts_list">
+        
             <li>
                 <a href="mailton:julydaia@gmail.com"> julydaia@gmail.com</a>
             </li>
@@ -38,7 +38,7 @@
             <li>
                 <a href="https://github.com/juliana-daiane" target="_blank"> Github</a>
             </li>
-        </ol>
+        </ul>
     </footer>
 </body>
 </html>
